--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "chatbox",
   "version": "1.0.0",
   "description": "APi services to Group chat",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "gulp sanity"
+    "db:migration": "node db/migrate",
+    "lint": "eslint .",
+    "start": "node server",
+    "start:dev": "nodemon server.js",
+    "start:local": "NODE_ENV=local nodemon server.js",
+    "test": "eslint . --fix && SET NODE_ENV=test&& nyc --reporter=html --reporter=text-summary mocha --recursive --timeout 10000 test/"
   },
   "keywords": [
     "chat",
@@ -16,11 +21,27 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "gulp": "^4.0.2",
+    "eslint-config-google": "0.14.0",
+    "eslint-plugin-prettier": "3.3.0",
+    "faker": "^5.1.0",
     "mocha": "^10.0.0",
-    "gulp-mocha": "^8.0.0"
+    "nodemon": "2.0.6",
+    "nyc": "15.1.0",
+    "prettier": "2.2.1",
+    "supertest": "^6.0.1",
+    "supertest-session": "^4.1.0"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "async-retry": "1.3.1",
+    "config": "3.3.3",
+    "express": "^4.18.1",
+    "express-enforces-ssl": "^1.1.0",
+    "express-session": "^1.17.3",
+    "http-status-codes": "^2.1.4",
+    "lodash": "4.17.20",
+    "pg-promise": "10.8.1",
+    "stoppable": "1.1.0",
+    "validate.js": "0.13.1",
+    "winston": "3.3.3"
   }
 }
