--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.18.1",
     "express-enforces-ssl": "^1.1.0",
     "express-session": "^1.17.3",
+    "helmet": "^5.1.0",
     "http-status-codes": "^2.1.4",
     "lodash": "4.17.20",
     "pg-promise": "10.8.1",
